Fix text breaking issue

--- a/style.css
+++ b/style.css
@@ -56,6 +56,8 @@
       }
       .purple {
         color: rgb(194, 7, 194);
+          display: inline-block;
+  white-space: nowrap;
       }
       #element {
         color: rgb(194, 7, 194);
